login page splash screen edit

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 left: 0;
                 right: 0;
                 bottom: 0;
-                background-color: #3C4252;
+                background-color: #000;
                 z-index: 99999;
                 pointer-events: none;
             }
@@ -40,7 +40,8 @@
             }
 
             #fuse-splash-screen .logo {
-                width: 128px;
+                width: 160px;
+                height: 100px;
                 margin: 0 auto;
             }
 
@@ -97,7 +98,7 @@
                 width: 100px;
                 height: 100px;
                 box-sizing: border-box;
-                border: 10px solid #4285F4;
+                border: 10px solid #DC1E2D;
                 border-bottom-color: transparent;
                 border-radius: 50%;
             }
@@ -189,7 +190,7 @@
             <div class="center">
 
                 <div class="logo">
-                    <img width="128" src="assets/images/logos/fuse.svg">
+                    <img src="assets/images/ayo/AYO-logo.png" srcset="assets/images/ayo/AYO-logo@2x.png 2x">
                 </div>
 
                 <!-- Material Design Spinner -->
