--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 
 <head>
 
-  <title>AYO Principal Web Apps - DXTR</title>
+  <title>HMS AYO SRC</title>
   <base href="/">
 
   <meta charset="utf-8">
-  <meta name="description" content="AYO Principal Web Apps - DXTR">
-  <meta name="keywords" content="AYO Sampoerna, AYO Principal, AYO, Sampoerna, DXTR, Web, Apps, Web Apps">
-  <meta name="author" content="Withinpixels">
+  <meta name="description" content="HMS AYO SRC">
+  <meta name="keywords" content="HMS AYO SRC">
+  <meta name="author" content="PT. SRC Indonesia Sembilan">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
