--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 
     #fuse-splash-screen .logo {
       width: 160px;
-      height: 100px;
+      /* height: 100px; */
       margin: 0 auto;
     }
 
@@ -205,7 +205,7 @@
     <div class="center">
 
       <div class="logo">
-        <img src="assets/images/ayo/AYO-logo.png" srcset="assets/images/ayo/AYO-logo@2x.png 2x">
+        <img src="assets/images/ayo/AYO_SRC_(Alt_White).png" style="width: 160px; margin: 0 auto;" srcset="assets/images/ayo/AYO_SRC_(Alt_White)@2x.png 2x">
       </div>
 
       <!-- Material Design Spinner -->
