--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,7 @@
     <div class="center">
 
       <div class="logo">
-        <img src="assets/images/ayo/AYO_SRC_(Alt_White).png" style="width: 160px; margin: 0 auto;" srcset="assets/images/ayo/AYO_SRC_(Alt_White)@2x.png 2x">
+        <img src="assets/images/ayo/icon/dev_white.png" style="width: 160px; margin: 0 auto;" srcset="assets/images/ayo/icon/dev_white@2x.png 2x">
       </div>
 
       <!-- Material Design Spinner -->
