--- a/src/public/index.qa.html
+++ b/src/public/index.qa.html
@@ -247,11 +247,11 @@
 
 </script>
 
-<!-- OneTrust Cookies Consent Notice start for hms.src.id -->
-<script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js" type="text/javascript" charset="UTF-8" data-domain-script="d4bf4472-ddef-4a6d-a81b-a4de028568ea" ></script>
+<!-- OneTrust Cookies Consent Notice start for hms.qa.src.id -->
+<script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js" type="text/javascript" charset="UTF-8" data-domain-script="3154bd35-660c-4508-aa05-74a0774360b6" ></script>
 <script type="text/javascript">
 function OptanonWrapper() { }
 </script>
-<!-- OneTrust Cookies Consent Notice end for hms.src.id -->
+<!-- OneTrust Cookies Consent Notice end for hms.qa.src.id -->
 
 </html>
