--- a/src/public/index.qa.html
+++ b/src/public/index.qa.html
@@ -243,14 +243,15 @@
   }
   gtag('js', new Date());
 
-  gtag('config', 'UA-125127400-3');
+  gtag('config', 'UA-125127400-3', { cookie_expires: 31536000 });
 
 </script>
 
 <!-- OneTrust Cookies Consent Notice start for hms.qa.src.id -->
+<script type="text/javascript" src="https://cdn.cookielaw.org/consent/3154bd35-660c-4508-aa05-74a0774360b6/OtAutoBlock.js" ></script>
 <script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js" type="text/javascript" charset="UTF-8" data-domain-script="3154bd35-660c-4508-aa05-74a0774360b6" ></script>
 <script type="text/javascript">
-function OptanonWrapper() { }
+  function OptanonWrapper() { }
 </script>
 <!-- OneTrust Cookies Consent Notice end for hms.qa.src.id -->
 
