revise OneTrust Cookies Script

--- a/src/public/index.prod.html
+++ b/src/public/index.prod.html
@@ -244,13 +244,22 @@
 
   <fuse-root></fuse-root>
 
-</body>
+  <!-- Google Tag Manager (noscript) --> 
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WPLNLPW" height="0" width="0" style="display:none;visibility:hidden">
+    </iframe>
+  </noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
-<!-- Google Tag Manager (noscript) --> 
-<noscript>
-  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WPLNLPW" height="0" width="0" style="display:none;visibility:hidden">
-  </iframe>
-</noscript> <!-- End Google Tag Manager (noscript) -->
+  <!-- OneTrust Cookies Consent Notice start for hms.src.id -->
+  <script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js" type="text/javascript" charset="UTF-8" data-domain-script="d4bf4472-ddef-4a6d-a81b-a4de028568ea" ></script>
+  <script type="text/javascript">
+    function OptanonWrapper() { }
+  </script>
+  <!-- OneTrust Cookies Consent Notice end for hms.src.id -->
+
+
+</body>
 
 
 </html>
