src catalogue feature enchancement

--- a/src/public/index.prod.html
+++ b/src/public/index.prod.html
@@ -192,19 +192,19 @@
         transform: rotate(1080deg);
       }
     }
-
   </style>
   <!-- / FUSE Splash Screen CSS -->
 
   <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-WPLNLPW');</script>
+  <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'GTM-WPLNLPW');</script>
+  
   <!-- End Google Tag Manager -->
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125127400-3">
   </script>
   <script>window.dataLayer = window.dataLayer || [];
-    function gtag() {dataLayer.push(arguments);}gtag('js', new Date());
+    function gtag() { dataLayer.push(arguments); } gtag('js', new Date());
     gtag('config', 'UA-125127400-3');
   </script>
 
@@ -218,7 +218,8 @@
     <div class="center">
 
       <div class="logo">
-        <img src="assets/images/ayo/AYO_SRC_(Alt_White).png" style="width: 160px; margin: 0 auto;" srcset="assets/images/ayo/AYO_SRC_(Alt_White)@2x.png 2x">
+        <img src="assets/images/ayo/AYO_SRC_(Alt_White).png" style="width: 160px; margin: 0 auto;"
+          srcset="assets/images/ayo/AYO_SRC_(Alt_White)@2x.png 2x">
       </div>
 
       <!-- Material Design Spinner -->
@@ -244,14 +245,15 @@
 
   <fuse-root></fuse-root>
 
-  <!-- Google Tag Manager (noscript) --> 
+  <!-- Google Tag Manager (noscript) -->
   <noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WPLNLPW" height="0" width="0" style="display:none;visibility:hidden">
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WPLNLPW" height="0" width="0"
+      style="display:none;visibility:hidden">
     </iframe>
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
 
 </body>
-
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5bW8GWFDn3WscWt9axCLFQ_3rc5_HPDg"></script>
 
 </html>
