--- a/src/public/index.training.html
+++ b/src/public/index.training.html
@@ -192,7 +192,6 @@
         transform: rotate(1080deg);
       }
     }
-
   </style>
   <!-- / FUSE Splash Screen CSS -->
 </head>
@@ -205,7 +204,8 @@
     <div class="center">
 
       <div class="logo">
-        <img src="assets/images/ayo/icon/training_white.png" style="width: 160px; margin: 0 auto;" srcset="assets/images/ayo/icon/training_white@2x.png 2x">
+        <img src="assets/images/ayo/icon/training_white.png" style="width: 160px; margin: 0 auto;"
+          srcset="assets/images/ayo/icon/training_white@2x.png 2x">
       </div>
 
       <!-- Material Design Spinner -->
@@ -232,7 +232,7 @@
   <fuse-root></fuse-root>
 
 </body>
-
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5bW8GWFDn3WscWt9axCLFQ_3rc5_HPDg"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125127400-3"></script>
 <script>
