--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,7 +11,8 @@
   <meta name="keywords" content="HMS AYO SRC">
   <meta name="author" content="PT. SRC Indonesia Sembilan">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: https://*.google-analytics.com https://*.doubleclick.net https://*.src.id https://*.googleapis.com https://*.google.com https://*.cookielaw.org https://*.gstatic.com https://*.googletagmanager.com https://*.amazonaws.com https://*.w3.org https://www.pmiprivacy.com https://i2.wp.com/www.solidcolore.com https://*.firebaseio.com https://*.qiscus.com https://api.whatsapp.com https://*.ytimg.com https://*.cloudfront.net *.amazoncognito.com https://*.dxtr.asia; connect-src 'self' 'unsafe-inline' ws: wss: wss://*.firebaseio.com wss://*.qiscus.com:1886 https://*.qiscus.com https://*.src.id https://*.google-analytics.com https://*.google.com https://*.cookielaw.org https://*.doubleclick.net https://*.dxtr.asia https://*.googleapis.com">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: https://*.google-analytics.com https://*.doubleclick.net https://*.src.id https://*.googleapis.com https://*.google.com https://*.cookielaw.org https://*.gstatic.com https://*.googletagmanager.com https://*.amazonaws.com https://*.w3.org https://www.pmiprivacy.com https://i2.wp.com/www.solidcolore.com https://*.firebaseio.com https://*.qiscus.com https://api.whatsapp.com https://*.ytimg.com https://*.cloudfront.net *.amazoncognito.com https://*.dxtr.asia; connect-src 'self' 'unsafe-inline' ws: wss: wss://*.firebaseio.com wss://*.qiscus.com:1886 https://*.qiscus.com https://*.src.id https://*.google-analytics.com https://*.google.com https://*.cookielaw.org https://*.doubleclick.net https://*.dxtr.asia https://*.googleapis.com">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -205,8 +206,9 @@
     <div class="center">
 
       <div class="logo">
-        <img src="assets/images/ayo/icon/dev_white.png" style="width: 160px; margin: 0 auto;"
-          srcset="assets/images/ayo/icon/dev_white@2x.png 2x">
+        <!-- <img id="image_loading_logo" src="assets/images/ayo/icon/dev_white.png" style="width: 160px; margin: 0 auto;"
+          srcset="assets/images/ayo/icon/dev_white@2x.png 2x"> -->
+        <img id="image_loading_logo" style="width: 160px; margin: 0 auto;">
       </div>
 
       <!-- Material Design Spinner -->
@@ -246,6 +248,17 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-125127400-3');
+
+  let user_country = window.localStorage.getItem("user_country") || "id";
+  let image_logo = document.querySelector("#image_loading_logo");
+
+  if (user_country === 'km') {
+    image_logo.setAttribute("src", "assets/images/louk/louk_new.png");
+    image_logo.setAttribute("srcset", "assets/images/louk/louk_new.png 2x");
+  } else {
+    image_logo.setAttribute("src", "assets/images/ayo/icon/dev_white.png");
+    image_logo.setAttribute("srcset", "assets/images/ayo/icon/dev_white@2x.png 2x");
+  }
 
 </script>
 
